[package]
name = "pqm-formatter"
version = "0.4.0"
edition = "2021"
authors = ["Your Name"]
description = "A code formatter for Power Query M language"
license = "MIT"
repository = "https://github.com/yourusername/pqm-formatter"
keywords = ["powerquery", "formatter", "m-language", "excel", "powerbi"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]

[dev-dependencies]

[[bin]]
name = "pqmfmt"
path = "src/main.rs"

[lib]
name = "pqm_formatter"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
