[package]
name = "pqm-formatter"
version = "0.5.0"
edition = "2021"
authors = ["fukuyori"]
description = "A code formatter for Power Query M language"
license = "MIT"
repository = "https://github.com/fukuyori/pqm-formatter"
keywords = ["powerquery", "formatter", "m-language", "excel", "powerbi"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]

[dev-dependencies]

[[bin]]
name = "pqmfmt"
path = "src/main.rs"

[lib]
name = "pqm_formatter"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
